add reset command

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 	<h1>Git Tutorial</h1>
 	<p>git status</p>
 	<p>git diff</p>
+	<p>git log</p>
+	<p>git rm</p>
 	<p>git mv</p>
+	<p>git checkout</p>
+	<p>git reset</p>
 </body>
 </html>
