--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 	<p>git log</p>
 	<p>git rm</p>
 	<p>git mv</p>
-	<p>git checkout</p>
+	<p>git checkout -- </p>
 	<p>git reset</p>
+	<p>git commit --amend</p>
 </body>
 </html>
