--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 	<p>git mv</p>
 	<p>git checkout -- </p>
 	<p>git reset</p>
-	<p>git commit --amend</p>
+	<p>git commit --amend</p><!-- pushしたコミットには絶対に使ってはいけない -->
 </body>
 </html>
