add memo about remote command

--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
 </head>
 <body>
 	<h1>Git Tutorial</h1>
-	<p>git status</p>
-	<p>git diff</p>
-	<p>git log</p>
-	<p>git rm</p>
-	<p>git mv</p>
-	<p>git checkout -- </p>
-	<p>git reset</p>
-	<p>git commit --amend</p><!-- pushしたコミットには絶対に使ってはいけない -->
+	<p>git status: 状態の確認</p>
+	<p>git diff: 変更内容の確認</p>
+	<p>git log: 変更履歴の確認</p>
+	<p>git rm: ファイルの削除</p>
+	<p>git mv: ファイル名の変更・移動</p>
+	<p>git checkout --: ファイル変更の取り消し</p>
+	<p>git reset: addの取り消し</p>
+	<p>git commit --amend: 直前のコミットの取り消し</p><!-- pushしたコミットには絶対に使ってはいけない -->
+	<p>git remote: リモートリポジトリの情報確認</p>
+	<p>git remote add [remote name] [remote url]: リモートリポジトリの追加 -v: URL表示</p>
 </body>
 </html>
