--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
 	<p>git remote show [remote name]: リモートの詳細情報の表示</p>
 	<p>git remote rename [old temote name] [new remote name] : リモート名の変更</p>
 	<p>git remoter rm [remote name]: リモートの削除</p>
+	<p>git branch [branch name]</p>
 </body>
 </html>
