--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 	<p>git remote show [remote name]: リモートの詳細情報の表示</p>
 	<p>git remote rename [old temote name] [new remote name] : リモート名の変更</p>
 	<p>git remoter rm [remote name]: リモートの削除</p>
-	<p>git branch [branch name]</p>
+	<p>git branch: 今いるブランチの確認 -a: 全てのブランチを表示</p>
+	<p>git branch [branch name]: ブランチの追加</p>
+	<p>git checkout [existing branch name]: ブランチの移動 -b [new branch name]: ブランチの新規作成・移動</p>
 </body>
 </html>
