--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
 	<p>git branch: 今いるブランチの確認 -a: 全てのブランチを表示</p>
 	<p>git branch [branch name]: ブランチの追加</p>
 	<p>git checkout [existing branch name]: ブランチの移動 -b [new branch name]: ブランチの新規作成・移動</p>
+	<p>git merge: </p>
 </body>
 </html>
