add 'conflict' to index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<h1>Git Tutorial</h1>
+	<p>conflict</p>
 	<p>git status: 状態の確認</p>
 	<p>git diff: 変更内容の確認</p>
 	<p>git log: 変更履歴の確認</p>
@@ -25,6 +26,6 @@
 	<p>git branch: 今いるブランチの確認 -a: 全てのブランチを表示</p>
 	<p>git branch [branch name]: ブランチの追加</p>
 	<p>git checkout [existing branch name]: ブランチの移動 -b [new branch name]: ブランチの新規作成・移動</p>
-	<p>git merge: </p>
+	<p>git merge [branch name to import]: 他のブランチ内容を取り込める</p>
 </body>
 </html>
