--- a/index.html
+++ b/index.html
@@ -27,5 +27,7 @@
 	<p>git branch [branch name]: ブランチの追加</p>
 	<p>git checkout [existing branch name]: ブランチの移動 -b [new branch name]: ブランチの新規作成・移動</p>
 	<p>git merge [branch name to import]: 他のブランチ内容を取り込める</p>
+	<p>git branch -m [branch name]: ブランチの変更</p>
+	<p>git branch -d [branch name]: ブランチの削除 -D: 強制削除</p>
 </body>
 </html>
