--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
 	<h1>Git Tutorial</h1>
 	<p>CONFLICT</p>
+	<p>pull request</p>
 	<p>git status: 状態の確認</p>
 	<p>git diff: 変更内容の確認</p>
 	<p>git log: 変更履歴の確認</p>
