--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@
 	<p>git rebase: 履歴を一直線に整えつつ、他のブランチの内容を取得して取り込む</p><!-- pushしたコミットは絶対にリベースしてはいけない ローカルとGithubの履歴に矛盾が起こるため -->
 	<p>git push -f: 強制プッシュ</p><!-- 絶対に使ってはいけないらしい -->
 	<p>git rebase -i [commit id(HEAD~3 etc)]: 複数のコミットをやり直す</p><!-- HEAD^n: HEADを基点にn番目の親コミットを指定 HEAD~n: n番目の親を起点にそれ以降のコミットを一括指定 -->
+	<p>git tag: </p>
+	<p>git stash:作業の一時避難 list: stashした作業の確認 apply: stashした作業の復元 apply --index: ステージ状況も復元 drop: 最新の作業を削除 clear: 全作業を削除</p>
 </body>
 </html>
